--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
    <application
+        android:usesCleartextTraffic="true"
         android:label="fabtech_aspirationclass_dev"
         android:icon="@mipmap/ic_launcher">
         <activity
