Student Payment/Dues -04-06-2021 completed facultyDetails -05-06-2021 completed

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
    <application
         android:usesCleartextTraffic="true"
-        android:label="fabtech_aspirationclass_dev"
+        android:label="Aspiration Billing Dev"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
